# atlas-assistant

./: .gitignore  Dockerfile  README.md  WARP.md  docker-compose.yml
client/: .eslintrc.json  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/login/: page.tsx
client/app/register/: page.tsx
client/components/: ChatComposer.tsx  ChatFeed.tsx  ChatHeader.tsx  ChatHistoryPanel.tsx  ChatMessage.tsx  ChatStatusIndicator.tsx  MarkdownContent.tsx  ProtectedRoute.tsx  ToolEventCard.tsx  UserProfile.tsx
client/contexts/: AuthContext.tsx
client/hooks/: useActiveConversation.ts  useChatPage.ts  useConversations.ts
client/lib/: auth.ts  debug.ts
client/services/: chat.ts  conversation.ts  index.ts
client/types/: auth.ts  chat.ts  conversation.ts  index.ts  tool.ts
client/utils/: chat.ts
deploy/k8s/: backend.yaml  frontend.yaml  ingress.yaml  namespace.yaml  secret-template.yaml
docs/: azure-deployment.md
server/: app.py  dependencies.py  drop_tables.py  langgraph.json  migrate_user_id.py  pyproject.toml  requirements.txt
server/agents/: excel_agent.py  orchestrator.py
server/agents/tools/: excel_query_tool.py  info_tools.py  location_tool.py
server/core/: __init__.py  auth.py  config.py  conversations.py  message_utils.py  schemas.py
server/helpers/: index_pdf.py
server/routes/: auth.py  chat.py  conversations.py
server/search_agent/: agent.py
server/services/: agent_manager.py  chat.py
